bubbles/bubbles-frontend/src/main/istio/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bubble-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bubble-gateway
spec:
  hosts:
  - "*"
  gateways:
  - bubble-gateway
  http:
  - match:
    - uri:
        prefix: /bubble
    rewrite:
      uri: /
    route:
    - destination:
        host: bubble-frontend
        port:
          number: 8080
